kustomize/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: app
        image: app
        ports:
        - containerPort: 80
