kustomize/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: lets-encrypt
    kubernetes.io/tls-acme: "true"
spec:
  tls: []
  rules:
    - http:
        paths:
          - backend:
              service:
                name: clusterip
                port:
                  number: 80
            path: /
            pathType: Prefix
